--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -4,8 +4,8 @@
     </button>
     <span class="text-2xl">Coderhouse</span>
     <span class="flex-1"></span>
-    <div class="w-3rem h-3rem surface-400 border-circle flex flex-row align-items-center justify-content-center select-none relative" [matMenuTriggerFor]="menu">
-      <span>TC</span>
+    <div class="w-3rem h-3rem select-none" [matMenuTriggerFor]="menu">
+      <div class="flex flex-row align-items-center justify-content-center border-circle w-full h-full bg-red-400 cursor-pointer">TC</div>
     </div>
   </mat-toolbar>
 
