--- a/src/app/features/students/students.component.html
+++ b/src/app/features/students/students.component.html
@@ -1,11 +1,12 @@
-<h2 title class="my-3">Estudiantes</h2>
-<section class="grid grid-nogutter">    
+<h2 title class="my-2">Estudiantes</h2>
+<section class="grid grid-nogutter py-2">    
     <p class="col-12">En esta sección se encuentran los estudiantes inscriptos a un curso, los cuales se listan en la siguiente tabla.</p>
     <p class="col-12">Aquí podrá realizar Altas, Modificaciones y Bajas de los estudiantes del curso.</p>
-    
+</section>
+
+<section class="grid grid-nogutter py-4">
     <button mat-raised-button 
-        color="primary" 
-        class="col-2 col-offset-10"
+        color="primary"
         (click)="createUserDialog()">Nuevo Estudiante</button>
     
     <app-student-list class="col-12 my-3" 
