--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,7 @@
 * { box-sizing: border-box; }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-mdc-dialog-content {
+    max-height: 85vh !important;
+}
