--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<app-toolbar [(sidenav)]="sidenav" (sidenavChange)="sidenavChange($event)"></app-toolbar>
-<app-sidenav [(sidenav)]="sidenav"></app-sidenav>
+<app-dashboard></app-dashboard>
