--- a/src/app/featured/home/home.component.html
+++ b/src/app/featured/home/home.component.html
@@ -1,1 +1,42 @@
-<p>home works!</p>
+<header class="my-7">
+    <h1 class="text-center text-6xl uppercase font-italic font-bold">Coderhouse</h1>
+</header>
+<section class="mx-4 mb-4">
+    <p class="text-xl">¡Hola!</p>
+    <p class="text-lg">Bienvenido a CoderHouse, la plataforma que desarrollará todas tus habilidades y por la cual vas poder crecer profesionalmente.</p>
+</section>
+
+<section class="w-full h-full px-4 my-2 flex flex-row justify-content-around align-items-end gap-4">
+    <mat-card class="min-w-min w-15rem surface-700">
+        <mat-card-header>
+            <h2 class="mx-auto font-semibold">Estudiantes</h2>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="w-6rem h-6rem border-circle surface-600 text-2xl font-bold flex flex-row align-items-center justify-content-center mx-auto shadow-2">
+                120
+            </div>
+        </mat-card-content>
+    </mat-card>
+
+    <mat-card class="min-w-min w-20rem h-15rem surface-700 min-w-min">
+        <mat-card-header>
+            <h2 class="mx-auto font-semibold">Cursos</h2>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="w-8rem h-8rem border-circle surface-600 text-4xl font-bold flex flex-row align-items-center justify-content-center mx-auto shadow-2">
+                15
+            </div>
+        </mat-card-content>
+    </mat-card>
+
+    <mat-card class="min-w-min w-15rem surface-700 min-w-min">
+        <mat-card-header>
+            <h2 class="mx-auto font-semibold">Materias</h2>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="w-6rem h-6rem border-circle surface-600 text-2xl font-bold flex flex-row align-items-center justify-content-center mx-auto shadow-2">
+                50
+            </div>
+        </mat-card-content>
+    </mat-card>
+</section>
