--- a/src/app/featured/student/student.component.html
+++ b/src/app/featured/student/student.component.html
@@ -1,10 +1,12 @@
-<h2 title class="my-2">Estudiantes</h2>
-<section class="grid grid-nogutter py-2">    
-    <p class="col-12">En esta sección se encuentran los estudiantes inscriptos a un curso, los cuales se listan en la siguiente tabla.</p>
-    <p class="col-12">Aquí podrá realizar Altas, Modificaciones y Bajas de los estudiantes del curso.</p>
-</section>
+<div class="m-5">
+    <h2 title class="my-2">Estudiantes</h2>
+    <section class="grid grid-nogutter py-2">    
+        <p class="col-12">En esta sección se encuentran los estudiantes inscriptos a un curso, los cuales se listan en la siguiente tabla.</p>
+        <p class="col-12">Aquí podrá realizar Altas, Modificaciones y Bajas de los estudiantes del curso.</p>
+    </section>
+</div>
 
-<section class="grid grid-nogutter py-4">
+<section class="grid grid-nogutter py-4 mx-3">
     <button mat-raised-button 
         color="primary"
         (click)="createUserDialog()">Nuevo Estudiante</button>
