--- a/src/app/featured/student/components/student-list/student-list.component.html
+++ b/src/app/featured/student/components/student-list/student-list.component.html
@@ -38,6 +38,9 @@
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let student">
+            <button mat-icon-button [routerLink]="student.id" color="primary">
+                <mat-icon>visibility</mat-icon>
+            </button>
             <button mat-icon-button color="primary" (click)="edit(student)">
                 <mat-icon>edit</mat-icon>
             </button>
