correccion en home

--- a/src/app/featured/home/home.component.html
+++ b/src/app/featured/home/home.component.html
@@ -1,9 +1,9 @@
 <header class="my-7">
     <h1 class="text-center text-6xl uppercase font-italic font-bold">Coderhouse</h1>
 </header>
-<section class="mx-4 mb-4">
+<section class="mx-4 mb-6">
     <p class="text-xl">¡Hola!</p>
-    <p class="text-lg">Bienvenido a CoderHouse, la plataforma que desarrollará todas tus habilidades y por la cual vas poder crecer profesionalmente.</p>
+    <p class="text-base">Bienvenido a CoderHouse, la plataforma que desarrollará todas tus habilidades y por la cual vas poder crecer profesionalmente.</p>
 </section>
 
 <section class="w-full h-full px-4 my-2 flex flex-row justify-content-around align-items-end gap-4">
