inscriptions y tests json server

--- a/src/app/dashboard/layout/sidenav/sidenav.component.html
+++ b/src/app/dashboard/layout/sidenav/sidenav.component.html
@@ -18,7 +18,7 @@
       </mat-nav-list>    
     </mat-sidenav>
   
-    <main>
+    <main class="p-2">
       <router-outlet></router-outlet>  
     </main>
   </mat-sidenav-container>
