--- a/src/app/featured/inscription/pages/inscription-table/inscription-table.component.html
+++ b/src/app/featured/inscription/pages/inscription-table/inscription-table.component.html
@@ -1,9 +1,14 @@
-<table mat-table [dataSource]="dataSource" class="shadow-2 border-round-md overflow-hidden">    
+<table mat-table [dataSource]="dataSource" class="my-2 shadow-2 border-round-md overflow-hidden">    
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> # </th>
-      <td mat-cell *matCellDef="let inscription"> {{inscription.id}} </td>
+      <th mat-header-cell *matHeaderCellDef class="w-2rem"> # </th>
+      <td mat-cell *matCellDef="let inscription" class="text-center"> {{inscription.id}} </td>
     </ng-container>
   
+    <ng-container matColumnDef="courseId">
+      <th mat-header-cell *matHeaderCellDef class="w-6rem"> ID Curso </th>
+      <td mat-cell *matCellDef="let inscription" class="text-center"> {{inscription['course'].id}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="course">
       <th mat-header-cell *matHeaderCellDef> Curso </th>
       <td mat-cell *matCellDef="let inscription"> {{inscription['course'].name}} </td>
@@ -11,8 +16,8 @@
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let inscription">
+        <th mat-header-cell *matHeaderCellDef class="w-2rem"> Acciones </th>
+        <td mat-cell *matCellDef="let inscription" class="text-rigth">
             <button mat-icon-button *ngIf="canView" [routerLink]="inscription.id" color="primary">
                 <mat-icon>visibility</mat-icon>
             </button>
@@ -20,7 +25,7 @@
                 <mat-icon>edit</mat-icon>
             </button>
             <button mat-icon-button *ngIf="canDelete" color="warn" (click)="delete(inscription)">
-                <mat-icon>delete</mat-icon>
+                <mat-icon>remove</mat-icon>
             </button>
         </td>
     </ng-container>
