--- a/src/app/featured/auth/pages/login/login.component.html
+++ b/src/app/featured/auth/pages/login/login.component.html
@@ -1,14 +1,19 @@
-<div class="w-5 h-screen mx-auto flex flex-column justify-content-center gap-5">
-    <h1 class="text-center text-4xl font-bold">Log In</h1>
-    <form [formGroup]="authForm" class="p-6 grid grid-nogutter shadow-4 border-round-lg">
+<div class="w-20rem pt-4 h-screen mx-auto flex flex-column align-items-center gap-5">
+    <img src="../../../../../assets/images/login-avatar.png" alt="img" class="w-6rem">
+    <h1 class="text-center text-6xl uppercase font-italic font-bold">Coderhouse</h1>
+    <form [formGroup]="authForm" class="p-4 grid grid-nogutter shadow-4 border-round-lg">
         <mat-form-field appearance="outline" class="col-12">
             <mat-label>Correo Electrónico</mat-label>
-            <input matInput formControlName="email" type="email" (keydown.enter)="onKeyEnter($event)">
+            <input matInput 
+                formControlName="email" 
+                type="email"
+                autocomplete="email"
+                (keydown.enter)="onKeyEnter($event)" >
             <mat-error *ngFor="let error of emailControl.errors | keyvalue">{{ error | formControlError: 'Correo Electrónico' }}</mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-12">
             <mat-label>Contraseña</mat-label>
-            <input matInput formControlName="pass" [type]="showPass ? 'text' :'password'" (keydown.enter)="onKeyEnter($event)">
+            <input matInput formControlName="pass" [type]="showPass ? 'text' :'password'" autocomplete="current-password" (keydown.enter)="onKeyEnter($event)">
             <button mat-icon-button matSuffix (click)="showPass = !showPass">
                 <mat-icon>{{showPass ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
